Add separate package.json for Netlify functions

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install --production && npm run build"
+  command = "npm install --production && cd netlify/functions && npm install --production && cd ../.. && npm run build"
   publish = "public"
   functions = "netlify/functions"
 
